--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "eslinter": "^3.2.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongoose": "^5.6.10",
