--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "eslinter": "^3.2.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-router": "0.0.1",
+    "jquery": "^3.4.1",
     "mongoose": "^5.6.10",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "router": "^1.3.3"
   }
 }
